# clash-prelude-quickcheck

./: .gitignore  BitInstances.hs  BitVectorInstances.hs  BruteBoolean.hs  LICENSE  MiscProperties.hs  README.md  SignalInstances.hs  VecInstances.hs  clash-prelude-quickcheck.cabal
src/: BitInstances.hs  SignalInstances.hs
src/CLaSH/QuickCheck/: BitInstances.hs  BitPackInstances.hs  BruteBoolean.hs  MiscProperties.hs  QuickCheckEquality.hs  SignalInstances.hs  VecInstances.hs
src/CLaSH/QuickCheck/Instances/: BitPack.hs  BitVector.hs  Signal.hs  Vec.hs
