name:                clash-prelude-quickcheck
version:             0.1.0.0
license-file:        LICENSE
author:              John Ericson
maintainer:          Ericson2314@Yahoo.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     CLaSH.QuickCheck.BitInstances
                     , CLaSH.QuickCheck.BitPackInstances
                     -- , CLaSH.QuickCheck.BruteBoolean
                     , CLaSH.QuickCheck.MiscProperties
                     , CLaSH.QuickCheck.QuickCheckEquality
                     , CLaSH.QuickCheck.SignalInstances
                     , CLaSH.QuickCheck.VecInstances
  -- other-modules:
  other-extensions:    ScopedTypeVariables
                     , LambdaCase
                     , TypeOperators
                     , DataKinds
                     , TypeFamilies
                     , UndecidableInstances
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , KindSignatures

  build-depends:       base           >=4.7 && <4.8
                     , QuickCheck     >=2.7 && <2.8
                     , clash-prelude  >=0.6 && <0.7
                     , mtl            >=2.2 && <2.3
                     , transformers   >=0.4 && <0.5
                     , containers     >=0.5 && <0.6

  hs-source-dirs:    src
  default-language:  Haskell2010
